# convia-license-server

./: .cursorignore  .env.example  .gitignore  Dockerfile  LICENSE  PRODUCTION.md  README.md  docker-compose.dev.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  admin_license.py  admin_page.py  admin_webhook.py  auth.py  license_pages.py  paddle_webhook.py  public_license.py
app/core/: __init__.py  config.py  email.py  paddle_webhook_verify.py  security.py  utils.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  customer.py  license.py  license_usage.py  machine_binding.py  magic_token.py  webhook_log.py
app/schemas/: __init__.py  license.py  machine_binding.py  magic_token.py  webhook_log.py
deployment/: convia-license.service
examples/: README.md  docker_entrypoint.sh  mistseeker_verify.py
scripts/: init_db.py
tests/: __init__.py  test_admin_reset.py  test_healthcheck.py  test_license_verify.py  test_paddle_webhook.py
